--- a/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="192" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="187" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="187"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0QE-dX-JkT" id="9Js-NU-CqU">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQa-9y-K0P">
-                        <rect key="frame" x="0.0" y="10" width="320" height="171"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="b2m-bK-goU">
-                                <rect key="frame" x="5" y="20" width="310" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="5" y="10" width="310" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="yAl-W6-ic5"/>
                                 </constraints>
@@ -28,14 +27,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="KC9-o9-x02">
-                                <rect key="frame" x="5" y="48" width="310" height="79"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <rect key="frame" x="0.0" y="38" width="320" height="104"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="d8H-s4-9Xu"/>
+                                    <constraint firstAttribute="height" constant="104" id="d8H-s4-9Xu"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="2" minimumInteritemSpacing="2" id="gI2-1t-GGm">
-                                    <size key="itemSize" width="78.5" height="78.5"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="gI2-1t-GGm">
+                                    <size key="itemSize" width="104" height="104"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -43,8 +41,7 @@
                                 <cells/>
                             </collectionView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sep 30 2014" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJw-rI-6rQ">
-                                <rect key="frame" x="224" y="135" width="91" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="224" y="150" width="91" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="Irg-K9-vN1"/>
                                 </constraints>
@@ -52,25 +49,17 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SRg-Sj-fgD" userLabel="Count View">
-                                <rect key="frame" x="138" y="128" width="34" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ovq-YJ-RBd" userLabel="Location View">
-                                <rect key="frame" x="5" y="135" width="211" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="5" y="150" width="211" height="16"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewq-Po-McN">
                                         <rect key="frame" x="18" y="0.0" width="193" height="16"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LocationHeaderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bqA-aT-qOD">
                                         <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="0nn-aS-FdQ"/>
                                             <constraint firstAttribute="height" constant="16" id="QYt-Xf-ZhR"/>
@@ -87,43 +76,19 @@
                                     <constraint firstItem="bqA-aT-qOD" firstAttribute="leading" secondItem="Ovq-YJ-RBd" secondAttribute="leading" id="vTJ-zG-Co4"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wx1-1f-rSX">
-                                <rect key="frame" x="290" y="48" width="30" height="79"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/CollectionTableViewCellDisclosure" translatesAutoresizingMaskIntoConstraints="NO" id="eWE-EU-6kg">
-                                        <rect key="frame" x="0.0" y="25" width="30" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="KtN-86-HnW"/>
-                                            <constraint firstAttribute="height" constant="30" id="eqb-xj-fwj"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="centerX" secondItem="eWE-EU-6kg" secondAttribute="centerX" id="Is1-bx-6t6"/>
-                                    <constraint firstAttribute="centerY" secondItem="eWE-EU-6kg" secondAttribute="centerY" id="awH-Tl-ARc"/>
-                                    <constraint firstAttribute="width" constant="30" id="nHD-os-lKS"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="b2m-bK-goU" secondAttribute="trailing" constant="5" id="5p5-hc-yyo"/>
                             <constraint firstItem="Ovq-YJ-RBd" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="5" id="DFn-DX-hqB"/>
                             <constraint firstItem="MJw-rI-6rQ" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="bottom" constant="8" id="Ecd-4M-O1e"/>
-                            <constraint firstItem="b2m-bK-goU" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" constant="20" id="Igb-3b-C2p"/>
-                            <constraint firstAttribute="trailing" secondItem="wx1-1f-rSX" secondAttribute="trailing" id="Jp7-X2-gLP"/>
+                            <constraint firstItem="b2m-bK-goU" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" constant="10" id="Igb-3b-C2p"/>
                             <constraint firstItem="b2m-bK-goU" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="5" id="NnG-o0-Q4o"/>
-                            <constraint firstItem="KC9-o9-x02" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="5" id="RPO-I1-FpH"/>
-                            <constraint firstItem="wx1-1f-rSX" firstAttribute="bottom" secondItem="KC9-o9-x02" secondAttribute="bottom" id="V4J-Qy-KGq"/>
+                            <constraint firstItem="KC9-o9-x02" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" id="RPO-I1-FpH"/>
                             <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="b2m-bK-goU" secondAttribute="bottom" constant="8" id="eX8-r6-waz"/>
-                            <constraint firstAttribute="bottom" secondItem="MJw-rI-6rQ" secondAttribute="bottom" constant="20" id="fSU-to-cCK"/>
                             <constraint firstItem="Ovq-YJ-RBd" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="bottom" constant="8" id="gWu-8E-7wu"/>
-                            <constraint firstItem="wx1-1f-rSX" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="top" id="giT-Y6-wQ5"/>
                             <constraint firstAttribute="trailing" secondItem="MJw-rI-6rQ" secondAttribute="trailing" constant="5" id="oTQ-ZD-9IW"/>
-                            <constraint firstAttribute="trailing" secondItem="KC9-o9-x02" secondAttribute="trailing" constant="5" id="sPn-jk-h2s"/>
+                            <constraint firstAttribute="trailing" secondItem="KC9-o9-x02" secondAttribute="trailing" id="sPn-jk-h2s"/>
                             <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" priority="900" constant="20" id="vXA-4P-WEW"/>
                             <constraint firstItem="MJw-rI-6rQ" firstAttribute="leading" secondItem="Ovq-YJ-RBd" secondAttribute="trailing" constant="8" id="zEf-qj-QI6"/>
                         </constraints>
@@ -133,7 +98,7 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="IQa-9y-K0P" secondAttribute="trailing" id="FAs-Ay-iQq"/>
                     <constraint firstAttribute="bottom" secondItem="IQa-9y-K0P" secondAttribute="bottom" constant="10" id="Q9o-WI-DRx"/>
-                    <constraint firstItem="IQa-9y-K0P" firstAttribute="top" secondItem="9Js-NU-CqU" secondAttribute="top" constant="10" id="QAh-VM-qvW"/>
+                    <constraint firstItem="IQa-9y-K0P" firstAttribute="top" secondItem="9Js-NU-CqU" secondAttribute="top" id="QAh-VM-qvW"/>
                     <constraint firstItem="IQa-9y-K0P" firstAttribute="leading" secondItem="9Js-NU-CqU" secondAttribute="leading" id="ro9-Aq-lZu"/>
                 </constraints>
             </tableViewCellContentView>
@@ -144,10 +109,15 @@
                 <outlet property="timeLabel" destination="MJw-rI-6rQ" id="xFN-Rk-bpE"/>
                 <outlet property="titleLabel" destination="b2m-bK-goU" id="7gj-wY-au7"/>
             </connections>
+            <point key="canvasLocation" x="140" y="166.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Assets/Icons/CollectionTableViewCellDisclosure" width="16" height="16"/>
         <image name="Assets/Icons/LocationHeaderIcon" width="16" height="16"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
