--- a/strand/iOS/Strand/Strand/DFSelectablePhotoViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSelectablePhotoViewCell.xib
@@ -1,48 +1,55 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Lih-fC-ket" customClass="DFSelectablePhotoViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="50" placeholderIntrinsicHeight="50" id="Lih-fC-ket" customClass="DFSelectablePhotoViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="60" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="61"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hac-QT-qXU">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="61"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/PhotoSelectedIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Wx8-sz-NF2" userLabel="SelectedIcon">
-                        <rect key="frame" x="24" y="4" width="26" height="26"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="34" y="4" width="26" height="26"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="26" id="Jjk-Vw-1Y1"/>
-                            <constraint firstAttribute="width" constant="26" id="eJW-xu-HwS"/>
+                            <constraint firstAttribute="width" constant="26" id="FSe-ao-zer"/>
+                            <constraint firstAttribute="height" constant="26" id="biz-oe-IaD"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
             <constraints>
-                <constraint firstItem="Wx8-sz-NF2" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" constant="4" id="4Ti-Y5-Gag"/>
-                <constraint firstItem="Hac-QT-qXU" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" id="DDW-VL-rfo"/>
-                <constraint firstAttribute="trailing" secondItem="Hac-QT-qXU" secondAttribute="trailing" id="H8P-Fl-sTr"/>
-                <constraint firstItem="Hac-QT-qXU" firstAttribute="leading" secondItem="Lih-fC-ket" secondAttribute="leading" id="III-qz-rO0"/>
-                <constraint firstAttribute="bottom" secondItem="Hac-QT-qXU" secondAttribute="bottom" id="aph-4v-Njx"/>
-                <constraint firstAttribute="trailing" secondItem="Wx8-sz-NF2" secondAttribute="trailing" id="nHh-8X-qMv"/>
+                <constraint firstItem="Hac-QT-qXU" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" id="FnD-pE-LYU"/>
+                <constraint firstAttribute="bottom" secondItem="Hac-QT-qXU" secondAttribute="bottom" id="Sfq-4z-Udd"/>
+                <constraint firstAttribute="trailing" secondItem="Wx8-sz-NF2" secondAttribute="trailing" id="YHI-ZF-76g"/>
+                <constraint firstItem="Hac-QT-qXU" firstAttribute="leading" secondItem="Lih-fC-ket" secondAttribute="leading" id="az0-M3-h2J"/>
+                <constraint firstItem="Wx8-sz-NF2" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" constant="4" id="eqt-yv-Nyj"/>
+                <constraint firstAttribute="trailing" secondItem="Hac-QT-qXU" secondAttribute="trailing" id="h9J-iw-eYt"/>
             </constraints>
+            <size key="customSize" width="-53" height="-56"/>
             <connections>
                 <outlet property="imageView" destination="Hac-QT-qXU" id="WOx-u3-SfB"/>
                 <outlet property="selectedImageView" destination="Wx8-sz-NF2" id="fd6-7V-zUM"/>
             </connections>
+            <point key="canvasLocation" x="366" y="221.5"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="Assets/Icons/PhotoSelectedIcon" width="16" height="16"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
