--- a/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
@@ -7,30 +7,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="187" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="187"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="230" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="218"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0QE-dX-JkT" id="9Js-NU-CqU">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQa-9y-K0P">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQa-9y-K0P" userLabel="Solid Background">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="208"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="b2m-bK-goU">
-                                <rect key="frame" x="5" y="10" width="310" height="20"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sep 30 2014" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJw-rI-6rQ">
+                                <rect key="frame" x="8" y="185" width="304" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="yAl-W6-ic5"/>
+                                    <constraint firstAttribute="height" constant="15" id="GRE-3Y-s4o"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Williamsburg, Brooklyn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewq-Po-McN">
+                                <rect key="frame" x="8" y="145" width="304" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="jV8-gE-zae"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="KC9-o9-x02">
-                                <rect key="frame" x="0.0" y="38" width="320" height="104"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="33" width="320" height="104"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="104" id="d8H-s4-9Xu"/>
+                                    <constraint firstAttribute="height" constant="104" id="Vfv-d0-V5R"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="gI2-1t-GGm">
                                     <size key="itemSize" width="104" height="104"/>
@@ -40,57 +48,57 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sep 30 2014" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJw-rI-6rQ">
-                                <rect key="frame" x="224" y="150" width="91" height="16"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="with Aseem, Derek" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPB-S6-YvY">
+                                <rect key="frame" x="8" y="165" width="304" height="17"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="91" id="Irg-K9-vN1"/>
+                                    <constraint firstAttribute="height" constant="17" id="ZBN-Yd-mEk"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ovq-YJ-RBd" userLabel="Location View">
-                                <rect key="frame" x="5" y="150" width="211" height="16"/>
-                                <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewq-Po-McN">
-                                        <rect key="frame" x="18" y="0.0" width="193" height="16"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LocationHeaderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bqA-aT-qOD">
-                                        <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="16" id="0nn-aS-FdQ"/>
-                                            <constraint firstAttribute="height" constant="16" id="QYt-Xf-ZhR"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLK-2v-mHU">
+                                <rect key="frame" x="8" y="8" width="36" height="17"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="Ewq-Po-McN" secondAttribute="bottom" id="A6b-fL-Wwk"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ewq-Po-McN" secondAttribute="trailing" id="FYP-cz-EJq"/>
-                                    <constraint firstItem="Ewq-Po-McN" firstAttribute="leading" secondItem="bqA-aT-qOD" secondAttribute="trailing" constant="2" id="IiH-tU-ZYL"/>
-                                    <constraint firstAttribute="centerY" secondItem="bqA-aT-qOD" secondAttribute="centerY" id="l7O-zv-KO4"/>
-                                    <constraint firstItem="Ewq-Po-McN" firstAttribute="top" secondItem="Ovq-YJ-RBd" secondAttribute="top" id="m38-0K-MmE"/>
-                                    <constraint firstItem="bqA-aT-qOD" firstAttribute="leading" secondItem="Ovq-YJ-RBd" secondAttribute="leading" id="vTJ-zG-Co4"/>
+                                    <constraint firstAttribute="height" constant="17" id="epw-Jk-62z"/>
                                 </constraints>
-                            </view>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="invited you to a Strand" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adG-vZ-Sef">
+                                <rect key="frame" x="47" y="8" width="146" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="XKk-AH-ada"/>
+                                    <constraint firstAttribute="width" constant="146" id="gMf-Us-Zht"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="b2m-bK-goU" secondAttribute="trailing" constant="5" id="5p5-hc-yyo"/>
-                            <constraint firstItem="Ovq-YJ-RBd" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="5" id="DFn-DX-hqB"/>
-                            <constraint firstItem="MJw-rI-6rQ" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="bottom" constant="8" id="Ecd-4M-O1e"/>
-                            <constraint firstItem="b2m-bK-goU" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" constant="10" id="Igb-3b-C2p"/>
-                            <constraint firstItem="b2m-bK-goU" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="5" id="NnG-o0-Q4o"/>
-                            <constraint firstItem="KC9-o9-x02" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" id="RPO-I1-FpH"/>
-                            <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="b2m-bK-goU" secondAttribute="bottom" constant="8" id="eX8-r6-waz"/>
-                            <constraint firstItem="Ovq-YJ-RBd" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="bottom" constant="8" id="gWu-8E-7wu"/>
-                            <constraint firstAttribute="trailing" secondItem="MJw-rI-6rQ" secondAttribute="trailing" constant="5" id="oTQ-ZD-9IW"/>
-                            <constraint firstAttribute="trailing" secondItem="KC9-o9-x02" secondAttribute="trailing" id="sPn-jk-h2s"/>
-                            <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" priority="900" constant="20" id="vXA-4P-WEW"/>
-                            <constraint firstItem="MJw-rI-6rQ" firstAttribute="leading" secondItem="Ovq-YJ-RBd" secondAttribute="trailing" constant="8" id="zEf-qj-QI6"/>
+                            <constraint firstItem="MJw-rI-6rQ" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="8" id="3I9-Yr-BWu"/>
+                            <constraint firstItem="MJw-rI-6rQ" firstAttribute="top" secondItem="NPB-S6-YvY" secondAttribute="bottom" constant="3" id="3Xj-UH-bsu"/>
+                            <constraint firstAttribute="trailing" secondItem="MJw-rI-6rQ" secondAttribute="trailing" constant="8" id="FQw-kw-0rq"/>
+                            <constraint firstItem="MJw-rI-6rQ" firstAttribute="top" secondItem="Ewq-Po-McN" secondAttribute="bottom" priority="900" constant="3" id="Iia-KW-byq"/>
+                            <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" priority="900" id="JUZ-c7-WnS"/>
+                            <constraint firstItem="KC9-o9-x02" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" id="KLE-7I-NSQ"/>
+                            <constraint firstAttribute="bottom" secondItem="MJw-rI-6rQ" secondAttribute="bottom" constant="8" id="Nya-Eh-zOX"/>
+                            <constraint firstAttribute="trailing" secondItem="KC9-o9-x02" secondAttribute="trailing" id="Tfj-p6-0hh"/>
+                            <constraint firstItem="Ewq-Po-McN" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="8" id="VUE-yM-cTu"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="adG-vZ-Sef" secondAttribute="trailing" constant="8" id="ajT-76-BpP"/>
+                            <constraint firstItem="adG-vZ-Sef" firstAttribute="leading" secondItem="aLK-2v-mHU" secondAttribute="trailing" constant="3" id="e4f-TG-k3O"/>
+                            <constraint firstItem="aLK-2v-mHU" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" constant="8" id="ppP-Ql-rUT"/>
+                            <constraint firstItem="aLK-2v-mHU" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="8" id="sWm-ms-J1c"/>
+                            <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="adG-vZ-Sef" secondAttribute="bottom" constant="8" id="ttk-NP-1vS"/>
+                            <constraint firstAttribute="trailing" secondItem="Ewq-Po-McN" secondAttribute="trailing" constant="8" id="uT5-bR-hfX"/>
+                            <constraint firstItem="NPB-S6-YvY" firstAttribute="top" secondItem="Ewq-Po-McN" secondAttribute="bottom" constant="3" id="vbh-Zl-0V0"/>
+                            <constraint firstItem="adG-vZ-Sef" firstAttribute="top" secondItem="IQa-9y-K0P" secondAttribute="top" constant="8" id="w9m-dA-9JW"/>
+                            <constraint firstItem="NPB-S6-YvY" firstAttribute="leading" secondItem="IQa-9y-K0P" secondAttribute="leading" constant="8" id="y7h-fO-24M"/>
+                            <constraint firstAttribute="trailing" secondItem="NPB-S6-YvY" secondAttribute="trailing" constant="8" id="z62-zW-zwo"/>
+                            <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="aLK-2v-mHU" secondAttribute="bottom" constant="8" id="zco-Dz-FXA"/>
+                            <constraint firstItem="Ewq-Po-McN" firstAttribute="top" secondItem="KC9-o9-x02" secondAttribute="bottom" constant="8" id="zz5-BD-IR0"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -105,16 +113,16 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="collectionView" destination="KC9-o9-x02" id="hRG-bJ-Jqd"/>
+                <outlet property="invitedText" destination="adG-vZ-Sef" id="M8g-Hw-jj6"/>
+                <outlet property="inviterLabel" destination="aLK-2v-mHU" id="IQb-g4-NA7"/>
                 <outlet property="locationLabel" destination="Ewq-Po-McN" id="2eG-Au-9Ow"/>
+                <outlet property="peopleLabel" destination="NPB-S6-YvY" id="ZCA-jG-Anq"/>
+                <outlet property="solidBackground" destination="IQa-9y-K0P" id="0tm-qs-mlw"/>
                 <outlet property="timeLabel" destination="MJw-rI-6rQ" id="xFN-Rk-bpE"/>
-                <outlet property="titleLabel" destination="b2m-bK-goU" id="7gj-wY-au7"/>
             </connections>
-            <point key="canvasLocation" x="140" y="166.5"/>
+            <point key="canvasLocation" x="140" y="133"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Assets/Icons/LocationHeaderIcon" width="16" height="16"/>
-    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
